# workshop_ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  Makefile  PRD.md  README.md  TECHSPEC.md  blob  docker-compose.test.yml  docker-compose.yml
ADR/: ADR-0001-repo-scaffold.md  ADR-0002-backend-bootstrap-init-002.md  ADR-0003-frontend-bootstrap-init-003.md  ADR-0004-docker-compose-init-004.md  ADR-0005-quality-gates-init-005.md  ADR-0006-frontend-typecheck-gate-init-006.md  ADR-0007-clean-stage-a-hygiene.md  ADR-0008-db-schema-and-constraints-db-001.md  ADR-0009-alembic-bootstrap-db-002.md  ADR-0010-stage-counts-seeding-db-003.md  ADR-0011-clean-stage-b-stage-constants-and-indexes.md  ADR-0012-api-contracts-validation-and-error-format.md  ADR-0013-types-list-endpoint-api-002.md  ADR-0014-create-type-endpoint-api-003.md  ADR-0015-type-details-endpoint-api-004.md  (+17 more)
backend/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_schema_placeholder.py  0002_seed_stage_counts_on_type_insert.py  0002_seed_stages_on_insert.py
backend/app/: config.py  main.py
backend/app/api/v1/: errors.py  router.py  schemas.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/domain/: __init__.py  stages.py
backend/tests/: conftest.py  test_api_contracts.py  test_app.py  test_export_api.py  test_import_api.py  test_migrations.py  test_move_concurrency.py  test_type_details_api.py  test_type_history_api.py  test_type_move_api.py  test_types_create_api.py  test_types_list_api.py
(+61 files in other folders)
